--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
 body {
+  font-family: 'Brush Script MT', cursive;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  margin: 20px;
+}
+
+label {
+  display: block;
+  margin: 10px 0 5px;
+  font-size: 1.5rem; 
+}
+
+input {
+  display: block;
+  margin-bottom: 20px;
+  padding: 10px;
+  font-size: 1.5rem; 
+  width: 300px;
+}
+
+div {
+  margin: 10px 0;
+}
+
+.output {
+  font-size: 1.5rem; 
 }
